--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -82,10 +82,12 @@ jobs:
         ./.scripts/run_osx_build.sh
 
     - name: Install Miniconda for windows
-      uses: conda-incubator/setup-miniconda@a4260408e20b96e80095f42ff7f1a15b27dd94ca # v3.0.4
+      uses: isuruf/setup-miniconda@install_dir
       with:
         miniforge-version: latest
-        miniforge-variant: Mambaforge
+        miniforge-variant: Miniforge3
+        install-dir: ${{ github.workspace }}\\miniforge
+        architecture: x64
       if: matrix.os == 'windows'
 
     - name: Build on windows
